# JavaletteCompiler

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.lua  premake5.lua
doc/: jlc.txt
lib/: multiarray.bc  multiarray.c  multiarray.ll  newarray.bc  newarray.ll  prog  prog.ll  runtime.bc  runtime.ll
sandbox/: Box1.cpp  CMakeLists.txt  DAGTester.cpp  ParserOnly.cpp  PrintLinearIR.cpp  PrintTypedTree.cpp  TryStages.cpp
src/: BaseVisitor.cpp  BaseVisitor.h  CodeGen.cpp  CodeGen.h  Javalette.cf  Javalette.y  Main.cpp  Parser.h  Stage.h  StaticSemantics.cpp  StaticSemantics.h  TypeChecker.cpp  TypeChecker.h  TypeError.h  Util.h  ValidationError.h  Validator.cpp  Validator.h
src/Common/: BaseVisitor.cpp  BaseVisitor.h  Util.h
src/Frontend/: IndexChecker.cpp  IndexChecker.h  Javalette.cf  Javalette.y  Parser.h  StatementChecker.cpp  StatementChecker.h  TypeChecker.cpp  TypeChecker.h  TypeCheckerEnv.cpp  TypeCheckerEnv.h  TypeInferrer.cpp  TypeInferrer.h
src/LLVM-Backend/: BinOpBuilder.cpp  BinOpBuilder.h  CodeGen.cpp  CodeGen.h  CodegenEnv.cpp  CodegenEnv.h  ExpBuilder.cpp  ExpBuilder.h  IndexBuilder.cpp  IndexBuilder.h  IntermediateBuilder.cpp  IntermediateBuilder.h  ProgramBuilder.cpp  ProgramBuilder.h
src/X86-Backend/: Emitter.cpp  Emitter.h  Expander.cpp  Expander.h  RegAllocator.cpp  RegAllocator.h  X86Def.h
test/: CMakeLists.txt  TypeCheckerTest.cpp  testprg.jl
test/test-files/: test1.jl
tester/: README.md  testing.py
tester/Docker/: Dockerfile  Dockerfile-agda  Dockerfile-ocaml  Dockerfile-python  Dockerfile-riscv  Dockerfile-rust  Dockerfile-zig  Makefile  README.md  runtest.sh
tester/testsuite/bad/: array01.jl  array03.jl  array04.jl  array05.jl  array06.jl  array07.jl  assignedfunction.jl  bad003.jl  bad004.jl  bad005.jl  bad006.jl  bad007.jl  bad008.jl  bad009.jl  bad010.jl  bad011.jl  bad012.jl  bad013.jl  bad015.jl  bad016.jl  bad017.jl  bad018.jl  bad019.jl  bad020.jl  bad021.jl  bad022.jl  bad023.jl  bad025.jl  bad026.jl  bad027.jl  bad028.jl  bad029.jl  bad031.jl  bad032.jl  bad033.jl  bad034.jl  bad035.jl  bad036.jl  bad037.jl  bad038.jl  (+34 more)
tester/testsuite/extensions/adv_structs/: adv_structs001.jl  adv_structs002.jl  adv_structs002.output  adv_structs003.jl  adv_structs004.jl  adv_structs004.output  adv_structs005.jl  adv_structs005.output
tester/testsuite/extensions/arrays1/: array001.jl  array001.output  array002.jl  array002.output  array003.jl  array003.output  array004.jl  array004.output  array005.jl  array006.jl  array007.jl  array008.jl  array009.jl  array_default.jl
tester/testsuite/extensions/arrays1/bad/: bad001.jl  bad002.jl  parentheses.jl
tester/testsuite/extensions/arrays2/: array001.jl  array001.output  array002.jl  array002.output  array_nested_default.jl
tester/testsuite/extensions/arrays2/bad/: bad001.jl  bad002.jl
tester/testsuite/extensions/objects1/: counter.jl  linked.jl  points.jl  points.output  queue.jl  shadowedfunction.jl
tester/testsuite/extensions/objects1/bad/: bad001.jl  bad002.jl  bad003.jl  bad004.jl  bad005.jl  cyclic.jl  order.jl  parentheses.jl
tester/testsuite/extensions/objects2/: shapes.jl  shapes.output
tester/testsuite/extensions/objects2/bad/: bad001.jl
tester/testsuite/extensions/pointers/: list.jl  list.output  syntax.jl  tree.jl  tree.output
tester/testsuite/extensions/pointers/bad/: bad001.jl  bad002.jl  bad003.jl  parentheses.jl
tester/testsuite/good/: assignedargument.jl  core001.jl  core001.output  core002.jl  core004.jl  core005.jl  core006.jl  core006.output  core007.jl  core008.jl  core008.output  core009.jl  core010.jl  core011.jl  core012.jl  core012.output  core013.jl  core013.output  core014.jl  core014.output  core015.jl  core016.jl  core017.jl  core017.output  core018.input  core018.jl  core018.output  core019.jl  core019.output  core020.jl  core022.jl  core023.jl  core024.jl  core027.jl  core028.jl  core028.output  core029.input  core029.jl  core029.output  core030.jl  (+21 more)
